--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,9 @@
 <html>
 	<head>
-		<title>Home Page</title>
+		<title>Pacific Pygmy Owl: News API</title>
 	</head>
 	<body>
-		<h1>Home Page</h1>
+		<h1>Pacific Pygmy Owl</h1>
+        <h2>News API</h2>
 	</body>
 </html>
