--- a/views/index.html
+++ b/views/index.html
@@ -5,5 +5,11 @@
 	<body>
 		<h1>Pacific Pygmy Owl</h1>
         <h2>News API</h2>
+        <h3>Version History</h3>
+        <ul>
+            <li>Version 1.0<br>
+            SOMETHING</li>
+        </ul>
+
 	</body>
 </html>
