--- a/views/index.html
+++ b/views/index.html
@@ -4,12 +4,11 @@
 	</head>
 	<body>
 		<h1>Pacific Pygmy Owl</h1>
-        <h2>News API</h2>
+        <p>Access API here -> <strong>News API</strong></p>
         <h3>Version History</h3>
         <ul>
             <li>Version 1.0<br>
             SOMETHING</li>
         </ul>
-
 	</body>
 </html>
