--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<h1>Pacific Pygmy Owl</h1>
-        <p>Access API here -> <strong>News API</strong></p>
+        <p>Access API here: <strong><a href="/api">News API</a></strong></p>
         <h3>Version History</h3>
         <ul>
             <li>Version 1.0<br>
