--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Two Spotted Goby</title>
+		<title>Pacific Pygmy Owl</title>
         <link href="css/bootstrap.css" rel="stylesheet">
 	</head>
 	<body>
