--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
             ul { display:table; margin:0 auto;}
         </style>
 
-		<h1 style="text-align: center">Two Spotted Goby</h1>
+		<h1 style="text-align: center">Pacific Pygmy Owl</h1>
         <br>
         <h4 style="text-align: center">Our Team:</h4>
         <ul>
