--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="releases.html">API Releases</a>
+                    <a class="navbar-brand" href="release">API Releases</a>
                 </div>
             </div>
         </nav>
