--- a/views/releases.html
+++ b/views/releases.html
@@ -8,7 +8,7 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">Home</a>
+                    <a class="navbar-brand" href="">Home</a>
                 </div>
             </div>
         </nav>
