--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,37 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Home Page</title>
+		<title>Two Spotted Goby</title>
+        <link href="css/bootstrap.css" rel="stylesheet">
 	</head>
 	<body>
-		<h1>Home Page</h1>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">API Releases</a>
+                </div>
+            </div>
+        </nav>
+        
+        <!--unordered list center but left aligned--> 
+        <style>
+            ul { display:table; margin:0 auto;}
+        </style>
+
+		<h1 style="text-align: center">Two Spotted Goby</h1>
+        <br>
+        <h4 style="text-align: center">Our Team:</h4>
+        <ul>
+            <li>Aaron Quan</li>
+            <li>Waseem Sajeev</li>
+            <li>Paul Dong</li>
+            <li>Tony Kang</li>
+        </ul>
 	</body>
 </html>
