--- a/views/releases.html
+++ b/views/releases.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
-<head>
-    <title>API Releases</title>
-</head>
-<body>
-    <p>blah blah</p>
-</body>
+<html>
+    <head>
+        <title>API Releases</title>
+        <link href="css/bootstrap.css" rel="stylesheet">
+    </head>
+    <body>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">Home</a>
+                </div>
+            </div>
+        </nav>
+        <p>blah blah</p>
+    </body>
+</html>
