starting on parsing news files

--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Home</a>
                     <a class="navbar-brand" href="#/releases">API Releases</a>
+                    <a class="navbar-brand" href="api">API Quick Link</a>
                 </div>
             </div>
         </nav>
