--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-resource.js"></script>
         <script type="text/javascript" src="javascript/appNg.js"></script>
         <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="css/sidebar.css" rel="stylesheet">
 	</head>
 	<body ng-app="app">
         <nav class="navbar navbar-default">
@@ -18,6 +19,6 @@
                 </div>
             </div>
         </nav>
-        <div ng-view></div>
+        <div ng-view class='main-content'></div>
     </body>
 </html>
