--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,7 @@
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Home</a>
                     <a class="navbar-brand" href="#/releases">API Releases</a>
+                    <a class="navbar-brand" href="#/docs">API Documentation</a>
                     <a class="navbar-brand" href="api">API Quick Link</a>
                 </div>
             </div>
