--- a/views/releases.html
+++ b/views/releases.html
@@ -1,33 +1,34 @@
 <div ng-controller='releasesController as ctr'>
 	<div class="navbar sidebar sidebar-default">
 		<div class="container-fluid">
-			<ul class="nav nav-sidebar">
+			<ul class="nav nav-pills">
 				<div ng-repeat='release in ctr.releases'>
-				<li><a href="#/releases">{{release.version}}</a></li>
+				<li><a ng-click='ctr.selectRelease(release.version)'>{{release.version}}</a></li>
 			</ul>
 		</div>
 	</div>
-
 	<div class='sidebar-content'>
 		<div ng-repeat='release in ctr.releases'>
-			<div>
-				{{release.date}}
-			</div>
-			<div>
-				{{release.version}}
-			</div>
-			<div ng-repeat='route in release.new_routes'>
-				<li>{{route.name}} - {{route.description}}</li>
-				<div> Output-type - {{route.output_type}}</div>
-				<div ng-show="route.schema.length">
-					Schema
-					<div style='padding-left:2em' ng-repeat='attr in route.schema'>
-						<li type='circle'>{{attr}}</li>
+			<div ng-show='ctr.isSelected(release.version)'>
+				<div>
+					{{release.date}}
+				</div>
+				<div>
+					{{release.version}}
+				</div>
+				<div ng-repeat='route in release.new_routes'>
+					<li>{{route.name}} - {{route.description}}</li>
+					<div> Output-type - {{route.output_type}}</div>
+					<div ng-show='route.schema.length'>
+						Schema
+						<div style='padding-left:2em' ng-repeat='attr in route.schema'>
+							<li type='circle'>{{attr}}</li>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div ng-repeat='comment in release.implemented'>
-				{{comment}}
+				<div ng-repeat='comment in release.implemented'>
+					{{comment}}
+				</div>
 			</div>
 		</div>
 	</div>
