--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-resource.js"></script>
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script type="text/javascript" src="javascript/appNg.js"></script>
         <link href="css/bootstrap.css" rel="stylesheet">
         <link href="css/sidebar.css" rel="stylesheet">
@@ -15,8 +16,7 @@
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Home</a>
                     <a class="navbar-brand" href="#/releases">API Releases</a>
-                    <a class="navbar-brand" href="#/docs">API Documentation</a>
-                    <a class="navbar-brand" href="api">API Quick Link</a>
+                    <a class="navbar-brand" href="#/client">API Client</a>
                 </div>
             </div>
         </nav>
