--- a/views/releases.html
+++ b/views/releases.html
@@ -1,12 +1,10 @@
 <div ng-controller='releasesController as ctr'>
 	<div class="navbar sidebar">
 		<div class="container-fluid">
-			<ul class="nav nav-pills">
-				<div ng-repeat='release in ctr.releases'>
-					<li ng-class='{active:release.version === ctr.cVersion}'>
-						<a href ng-click='ctr.selectRelease(release.version)'>{{release.version}}</a>
-					</li>
-				</div>
+			<ul class="nav nav-pills nav-stacked">
+				<li ng-repeat='release in ctr.releases' ng-class='{active:release.version === ctr.cVersion}'>
+					<a href ng-click='ctr.selectRelease(release.version)'>{{release.version}}</a>
+				</li>
 			</ul>
 		</div>
 	</div>
