--- a/views/client.html
+++ b/views/client.html
@@ -6,10 +6,10 @@
   	</ul>
   	<div ng-show="ctr.isTab('upload')">
 		<h1>Select text file</h1>
-		<input type="file" on-read-file="ctr.showContent($fileContent)" />
-		<div ng-show="ctr.content">
-			<h2>File content is:</h2>
-			<pre style="white-space: pre-wrap;">{{ ctr.content }}</pre>
+		<input type="file" on-read-file="ctr.postContent($fileContent)" />
+		<div ng-show='contents.length'>
+			<h2>API output:</h2>
+			<pre style="white-space: pre-wrap;">{{contents}}</pre>
 		</div>
 	</div>
 	<div ng-show="ctr.isTab('input')">
