Modified design of releases page

--- a/views/index.html
+++ b/views/index.html
@@ -9,9 +9,10 @@
         <script type="text/javascript" src="javascript/appNg.js"></script>
         <link href="css/bootstrap.css" rel="stylesheet">
         <link href="css/sidebar.css" rel="stylesheet">
+        <link href="css/main.css" rel="stylesheet">
 	</head>
 	<body ng-app="app">
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Home</a>
