--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,7 @@
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Home</a>
                     <a class="navbar-brand" href="#/releases">API Releases</a>
+                    <a class="navbar-brand" href="#/guide">API Guide</a>
                     <a class="navbar-brand" href="#/client">API Client</a>
                 </div>
             </div>
