--- a/views/releases.html
+++ b/views/releases.html
@@ -20,7 +20,7 @@
 					<div class="panel panel-warning">
 					  <div class="panel-heading">
 					    <h2 class="panel-title">
-					    	<span class="label label-danger http-type" style="font-size=18px">POST</span>
+					    	<span class="label label-danger http-type" style="font-size=18px">{{route.request}}</span>
 					    	<code>
 					    	/api{{route.name}}
 					    	</code>
