--- a/views/client.html
+++ b/views/client.html
@@ -3,16 +3,19 @@
 	<ul class="nav nav-tabs">
 		<li ng-class="{active:ctr.isTab('upload')}"><a href ng-click="ctr.changeTab('upload')">Upload File</a></li>
 		<li ng-class="{active:ctr.isTab('input')}"><a href ng-click="ctr.changeTab('input')">Input Data</a></li>
+		<li ng-class="{active:ctr.isTab('example')}"><a href ng-click="ctr.changeTab('example')">Example</a></li>
   	</ul>
   	<div ng-show="ctr.isTab('upload')">
 		<h1>Select text file</h1>
 		<input type="file" on-read-file="ctr.postContent($fileContent)" />
-		<div ng-show='contents.length'>
 			<h2>API output:</h2>
 			<pre style="white-space: pre-wrap;">{{contents}}</pre>
-		</div>
 	</div>
 	<div ng-show="ctr.isTab('input')">
 		<h1>Input Data</h1>
+	</div>
+	<div ng-show="ctr.isTab('example')">
+		<h1>Example</h1>
+		<pre style="white-space: pre-wrap;">{{inputExample}}</pre>
 	</div>
 </div>
