--- a/views/index.html
+++ b/views/index.html
@@ -19,6 +19,7 @@
                     <a class="navbar-brand" href="#/releases">API Releases</a>
                     <a class="navbar-brand" href="#/guide">API Guide</a>
                     <a class="navbar-brand" href="#/client">API Client</a>
+                    <a class="navbar-brand" href="#/platform">Platform</a>
                 </div>
             </div>
         </nav>
