--- a/views/client.html
+++ b/views/client.html
@@ -32,6 +32,11 @@
 			<input type="datetime-local" step="0.001" value="{{ctr.curr_display_time}}" name="startdate">
 			End date:
 			<input type="datetime-local" step="0.001" value="{{ctr.curr_display_time}}" name="enddate">
+			<div ng-controller='codeController as codes'>
+				<input type="text" ng-model='codes.searchFor' ng-change='codes.search(codes.searchFor)'>{{codes.searchFor}}
+				<button class='btn-success' ng-repeat='code in searchCodes' ng-click='codes.addCode(code)'>{{code}}</button><br>
+				<button class='btn-primary' ng-repeat='code in currentCodes' ng-click='codes.removeCode(code)'>{{code}}</button>
+			</div>
 		</form>
 
 	</div>
