--- a/views/client.html
+++ b/views/client.html
@@ -26,27 +26,51 @@
 			<pre style="white-space: pre-wrap;">{{contents2}}</pre>
 	</div>
 	<div ng-show="ctr.isTab('gui')">
-		<h1>This is a GUI!!!</h1>
-		<form>
-			Start date:
-			<input type="datetime-local" step="0.001" value="{{ctr.curr_display_time}}" name="startdate">
-			End date:
-			<input type="datetime-local" step="0.001" value="{{ctr.curr_display_time}}" name="enddate">
-			<div ng-controller='codeController as codes'>
-				<div click-anywhere-but-here='codes.setSelectedTpc(false)'>
-					<div class='code-area'>
-						<span class='code-tag' ng-repeat='code in currentCodesTpc' ng-click='codes.removeCodeTpc(code)'>{{code}}</span>
+		<h1>Search for news articles</h1>
+		<div class="jumbotron">
+
+			<form>
+
+				<h4>Start date:</h4>
+				<input type="datetime-local" step="0.001" value="{{ctr.curr_display_time}}" name="startdate">
+				<h4>End date:</h4>
+				<input type="datetime-local" step="0.001" value="{{ctr.curr_display_time}}" name="enddate">
+
+
+				<h4>Select topic codes:</h4>
+				<div ng-controller='codeController as codes'>
+					<div click-anywhere-but-here='codes.setSelectedTpc(false)'>
+
+
+							<div class='row'>
+
+								<div class='col-xs-3'>
+									<input type="text" class='form-control' ng-model='codes.searchForTpc' ng-change="codes.searchTpc(codes.searchForTpc)" ng-focus='codes.setSelectedTpc(true)'>
+									 <span class="caret"></span>
+									<div ng-show='codes.textSelectedTpc'>
+										<div >
+											<li ng-repeat='code in searchCodesTpc' ng-click='codes.addCodeTpc(code)' class='list-group-item'>{{code}}</li>
+										</div>
+									</div>
+								</div>
+
+								<div class='col-xs-9'>
+									<div class='code-area'>
+										<span class='btn btn-success btn-sm code-tag' ng-repeat='code in currentCodesTpc' ng-click='codes.removeCodeTpc(code)'>{{code}}</span>
+									</div>
+								</div>
+
+							</div>
+
 					</div>
-					<input type="text" class='form-control code-width' ng-model='codes.searchForTpc' ng-change="codes.searchTpc(codes.searchForTpc)" ng-focus='codes.setSelectedTpc(true)'>
-					<div ng-show='codes.textSelectedTpc'>
-						<div class='code-option code-width'> 
-							<li ng-repeat='code in searchCodesTpc' ng-click='codes.addCodeTpc(code)'>{{code}}</li>
-						</div>
-					</div>
+
 				</div>
+
+<!-- 
+				<h4>Select instrument codes:</h4>
 				<div click-anywhere-but-here='codes.setSelectedInstr(false)'>
 					<div class='code-area'>
-						<span class='code-tag' ng-repeat='code in currentCodesInstr' ng-click='codes.removeCodeInstr(code)'>{{code}}</span>
+						<span class='btn btn-success btn-sm code-tag' ng-repeat='code in currentCodesInstr' ng-click='codes.removeCodeInstr(code)'>{{code}}</span>
 					</div>
 					<input type="text" class='form-control code-width' ng-model='codes.searchForInstr' ng-change="codes.searchInstr(codes.searchForInstr)" ng-focus='codes.setSelectedInstr(true)'>
 					<div ng-show='codes.textSelectedInstr'>
@@ -55,8 +79,10 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</form>
+ -->
+				<button class='btn btn-primary btn-lg' type='button'>Search</button>
 
+			</form>
+		</div>
 	</div>
 </div>
