--- a/views/client.html
+++ b/views/client.html
@@ -45,7 +45,7 @@
 									<li ng-repeat='code in obj.searchCodes' ng-click='codes.addCode(code, name)' class='list-group-item'>{{code}}</li>
 								</div>
 								<div class='code-area'>
-									<span class='btn btn-success btn-sm code-tag' ng-repeat='code in obj.currentCodes' ng-click='codes.removeCode(code, name)'>{{code}}</span>
+									<span class='btn btn-success btn-sm code-tag' ng-repeat='code in obj.currentCodes' ng-click='codes.removeCode(code, name)'>{{code}}</span>{{obj.currentCodes}}
 								</div>
 							</div>
 						</div>
