--- a/views/css/main.css
+++ b/views/css/main.css
@@ -25,12 +25,13 @@
 
 .code-area {
 	background-color: white;
-    /*padding: 10px; 
-    border: 2px solid #f4f4f4; 
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    width: 100%;*/
+  padding: 2px; 
+  border: 2px solid #f4f4f4; 
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  width: 100%;
+  margin-bottom: 3px;
 }
 
 /*.code-tag{
@@ -53,6 +54,21 @@
   border-color: #b92c28;
 }*/
 
+.drop-down{
+  height: 300px;
+  overflow-y: scroll;
+  position:absolute;
+  z-index:999; 
+  border: 1px solid #f3f3f3;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  width: 80%;
+}
+.code-tag{
+  text-align: center;
+}
+
 .code-tag:hover,
 .code-tag:focus {
   background-color: #c12e2a;
@@ -63,4 +79,19 @@
 .code-tag.active {
   background-color: #c12e2a;
   border-color: #b92c28;
+}
+
+.btn1 {
+  color : rgb(0,0,0);
+  background-color: rgba(200, 240, 180, 0.96);
+  font-size: 16px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+.btn1:not([disabled]):hover {
+  background-color: rgba(160, 200, 180, 0.96);
+  color : rgb(0,0,0);
+}
+.btn1[disabled] {
+  color : rgb(187, 187, 187);
+  background-color: rgba(200, 240, 180, 0.96);
 }
