--- a/views/client.html
+++ b/views/client.html
@@ -3,7 +3,7 @@
 	<ul class="nav nav-tabs">
 		<li ng-class="{active:ctr.isTab('upload')}"><a href ng-click="ctr.changeTab('upload')">Upload File</a></li>
 		<li ng-class="{active:ctr.isTab('input')}"><a href ng-click="ctr.changeTab('input')">Input Text</a></li>
-		<li ng-class="{active:ctr.isTab('gui')}"><a href ng-click="ctr.changeTab('gui')">GUI Test</a></li>
+		<li ng-class="{active:ctr.isTab('gui')}"><a href ng-click="ctr.changeTab('gui')">API User Interface</a></li>
   	</ul>
   	<div ng-show="ctr.isTab('upload')">
 		<h1>Select text file</h1>
@@ -47,8 +47,10 @@
 					</div>
 					<div class='row'>
 						<div class='col-xs-3' click-anywhere-but-here='codes.setSelected(false, name)'>
-							<input type="text" class='form-control' ng-model="obj.searchFor" ng-change="codes.search(obj.searchFor, name)" ng-focus='codes.setSelected(true, name)'>
-							 <span class="caret"></span>
+							<div class='form-group has-feedback'>
+								<input type="text" class='form-control' ng-model="obj.searchFor" ng-change="codes.search(obj.searchFor, name)" ng-focus='codes.setSelected(true, name)'>
+								 <span class="glyphicon glyphicon-triangle-bottom form-control-feedback"></span>
+							</div>
 							<div ng-show='obj.textSelected' class='drop-down'>
 								<li ng-repeat='code in obj.searchCodes' ng-click='codes.addCode(code, name)' class='list-group-item code-tag'>{{code}}</li>
 							</div>
