--- a/views/client.html
+++ b/views/client.html
@@ -27,7 +27,7 @@
 	</div>
 	<div ng-show="ctr.isTab('gui')" ng-controller='codeController as codes'>
 		<h1>Search for news articles</h1>
-		<div class="jumbotron">
+		<div class="jumbotron" style="padding-bottom: 74px">
 
 			<form>
 				<h4>Start date:</h4>
@@ -57,9 +57,23 @@
 						</div>
 					</div>
 				</div>
-				<button class='btn btn-primary btn-lg' type='button' ng-click='codes.postQueryGUI()'>Search</button>
+				<button class='btn btn-primary btn-lg' type='button' ng-click='codes.postQueryGUI()' style='float:right'>Search</button>
 			</form>
 		</div>
-		<pre>{{contentsFromGUI}}</pre>
+		<ul class="nav nav-tabs">
+			<li ng-class="{active:codes.isTab('style')}"><a href ng-click="codes.changeTab('style')">Styled</a></li>
+			<li ng-class="{active:codes.isTab('raw')}"><a href ng-click="codes.changeTab('raw')">Raw</a></li>
+		</ul>
+		<div ng-show="codes.isTab('raw')"> 
+			<pre>{{contentsFromGUI}}</pre>
+		</div>
+		<div ng-show="codes.isTab('style')">
+			<div ng-repeat='news in contentsAsJSON'>
+				<h4>{{news.headline}}</h4> <small>{{news.date | date}}</small>
+				<p>{{news.body}}</p>
+				{{news.tpc_list}}
+				{{news.instr_list}}
+			</div>
+		</div>
 	</div>
 </div>
