even better dates

--- a/views/client.html
+++ b/views/client.html
@@ -29,16 +29,16 @@
 		<h1>Search for news articles</h1>
 		<div class="jumbotron" style="padding-bottom: 74px">
 			<form>
-				<h4>Start date:</h4>
+				<h4>Start date and time:</h4>
 				<md-datepicker md-placeholder='Required' ng-model="start_date"></md-datepicker>
 				<md-slider flex min="0" max="86399" ng-model="times.start.sec" aria-label="time" ng-change="codes.toHHMMSS('start')">
       			</md-slider>
-      			<input type='text' class='form-control' ng-model='times.start.str' ng-change="codes.toSeconds('start')">
-				<h4>End date:</h4>
+      			<input type='text' class='form-control' ng-model='times.start.str' ng-change="codes.toSeconds('start')" style='width:200px'>
+				<h4>End date and time:</h4>
 				<md-datepicker md-placeholder='Required' ng-model="end_date"></md-datepicker>
-
-				<md-slider flex min="0" max="86399" ng-model="times.end.sec" aria-label="time">
+				<md-slider flex min="0" max="86399" ng-model="times.end.sec" aria-label="time" ng-change="codes.toHHMMSS('end')">
       			</md-slider>
+      			<input type='text' class='form-control' ng-model='times.end.str' ng-change="codes.toSeconds('end')" style='width:200px'>
 				<div ng-repeat='(name, obj) in codeData'>
 					<h4>{{obj.title}}</h4>
 					<div class='code-area'>
