--- a/views/index.html
+++ b/views/index.html
@@ -22,9 +22,9 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Home</a>
+                    <a class="navbar-brand" href="#/">Home</a>
                     <a class="navbar-brand" href="#/releases">API Releases</a>
-                    <a class="navbar-brand" href="#/guide">API Guide</a>
+                    <!--a class="navbar-brand" href="#/guide">API Guide</a-->
                     <a class="navbar-brand" href="#/client">API Client</a>
                 </div>
             </div>
