--- a/views/guide.html
+++ b/views/guide.html
@@ -1,5 +1,5 @@
 <div class="container-fluid" ng-controller='guideController as ctr'>
-	<h1>News API Guide</h1>
+	<h1>News API Documentation</h1>
 	<h3>Input</h3>
 	<pre>{{inputFormat}}</pre>
 	<h3>Usage</h3>
