--- a/views/client.html
+++ b/views/client.html
@@ -29,7 +29,7 @@
 		<h1>Search for news articles</h1>
 		<div class="jumbotron" style="padding-bottom: 74px">
 			<form>
-				<h4>Start date and time:</h4>
+				<h4>Start date and time: <small>(News in the database starts at 1/10/2015 00:00:00)</small></h4>
 				<md-datepicker md-placeholder='Required' ng-model="start_date"></md-datepicker>
 				<md-slider flex min="0" max="86399" ng-model="times.start.sec" aria-label="time" ng-change="codes.toHHMMSS('start')">
       			</md-slider>
