--- a/views/index.html
+++ b/views/index.html
@@ -25,6 +25,8 @@
                     <a class="navbar-brand" href="#/">Home</a>
                     <a class="navbar-brand" href="#/releases">API Releases</a>
                     <a class="navbar-brand" href="#/client">API Client</a>
+                    <a class="navbar-brand" href="#/status">API Status</a>
+                    <a class="navbar-brand" href="#/contact">Contact</a>
                     <!--a class="navbar-brand" href="#/guide">API Guide</a-->
                 </div>
             </div>
