--- a/views/status.html
+++ b/views/status.html
@@ -1,2 +1,3 @@
 <h2>Status:</h2>
-<h3 style="color:yellow;">Experimenting with new data</h3>
+<!--h3 style="color:yellow;">Experimenting with new data</h3-->
+<h3 style="color:green;">Online</h3>
